unpackaged/objects/Broker__c.object
<CustomObject>
	<label>Broker</label>
	<nameField>
		<label>Broker Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Brokers</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
	<fields>
		<fullName>Email__c</fullName>
		<label>Email</label>
		<type>Email</type>
	</fields>
	<fields>
		<fullName>Mobile_Phone__c</fullName>
		<label>Mobile Phone</label>
		<type>Phone</type>
	</fields>
	<fields>
		<fullName>Phone__c</fullName>
		<label>Phone</label>
		<type>Phone</type>
	</fields>
	<fields>
		<fullName>Picture_IMG__c</fullName>
		<formula>IMAGE( Picture__c , &quot;picture&quot; , 150, 150)</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Picture</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Picture__c</fullName>
		<label>Picture</label>
		<type>Url</type>
	</fields>
	<fields>
		<fullName>Title__c</fullName>
		<label>Title</label>
		<length>30</length>
		<type>Text</type>
	</fields>
	<listViews>
		<fullName>All</fullName>
		<columns>NAME</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
</CustomObject>